[package]
name = "arp-watch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.24.0"
env_logger = "0.9.0"
log = "0.4.17"
pnet = "0.31.0"
pnet_datalink = "0.31.0"
pnet_packet = "0.31.0"
tui = "0.18.0"
